# rust-backend

./: Cargo.toml
.github/workflows/: deploy.yml
.sqlx/: query-435164b1c441f8bf326b5a1e6aa23d8bbd71831843bf574f7ea2126ac2380b48.json  query-c4e94542182acab939d80fb89468e497bb712eb2b0905b495b9be6f73cb184d3.json
migrations/: 20260321025952_create_users_table.up.sql
src/: error.rs  main.rs  models.rs
src/routes/: users.rs
